chore: add assets

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,8 @@
   "version": "1.0.0",
   "description": "Filter only official videos",
   "icons": {
+    "16": "assets/icon16.png",
+    "32": "assets/icon32.png",
     "64": "assets/icon64.png",
     "128": "assets/icon128.png",
     "256": "assets/icon256.png"
