--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,9 @@
   "web_accessible_resources": [
     {
       "resources": [
+        "background.js",
+        "content.js",
+        "inject.css",
         "assets/*"
       ],
       "matches": [
@@ -27,7 +30,7 @@
     "background"
   ],
   "background": {
-    "service_worker": "workers/background.js",
+    "service_worker": "background.js",
     "type": "module"
   },
   "host_permissions": [
