--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,7 @@
       "resources": [
         "background.js",
         "content.js",
-        "inject.css",
+        "content.css",
         "assets/*"
       ],
       "matches": [
@@ -30,8 +30,7 @@
     "background"
   ],
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "host_permissions": [
     "https://www.youtube.com/results?*",
